# Unbeatable-TicTacToe

./: README.md  tic_tac_toe.py
C_Code/: CMakeLists.txt  Makefile  cmake_install.cmake  minimax.c  testBoards.c  ticTacToeControl.c  ticTacToeDisplay.c
